# CS460_Project1Submission

./: README.md
project1/: CMakeLists.txt  package.xml
project1/launch/: simulation_launch.py
project1/worlds/: project1world_gabriellekarabas.wbt
project2/: CMakeLists.txt  package.xml  setup.py
project2/launch/: outdoor_simulation_launch.py
project2/worlds/: outdoorworld_gabriellekarabas.wbt
